--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,31 @@
+#spring:
+#  datasource:
+#    url:  jdbc:h2:tcp://localhost/~/jpc
+#    username: sa
+#    password:
+#    dirver-class-name: org.h2.Driver
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    properties:
+#      hibernate:
+#        format_sql: true
+#
+#logging:
+#  level:
+#    org.hibernate.SQL: debug
+#    org.hiberante.type: trace
+
 spring:
   datasource:
-    url:  jdbc:h2:tcp://localhost/~/jpc
-    username: sa
-    password:
-    dirver-class-name: org.h2.Driver
-
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/cudo_db?serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: Cudo6411!
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
